# VHF-Radio-Effect

./: .gitignore  CMakeLists.txt  README.md
Bucket/: fxmodel.json  model.json  radiofx.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
